#ifndef MAIN_WINDOW_H
#define MAIN_WINDOW_H

#include <memory>

// Auto-generated by Qt's UI compiler
#include "ui_main_window.h"

#include "types.h"
#include "client_endpoint.h"


class MainWindow : public QMainWindow {
    Q_OBJECT

public:
    MainWindow();

public slots:
    void initializeClientEndpoint(const ClientEndpointConfig &);

protected:
    bool eventFilter(QObject *, QEvent *) override;

private slots:
    void onSendButtonClicked();
    void onNewMessageArrive(const QString &message);

private:
    Ui_MainWindow *m_ui;
    std::unique_ptr<ClientEndpoint> m_clientEndpointPtr;
};

#endif // MAIN_WINDOW_H
