#ifndef STARTUP_FORM_H
#define STARTUP_FORM_H

#include <QtGui/QCloseEvent>

// Auto-generated by Qt's UI compiler
#include "ui_startup_form.h"

#include "types.h"


class StartupForm : public QWidget {
    Q_OBJECT

public:
    StartupForm();

    const ClientEndpointConfig &getClientEndpointConfig() const {
        return m_clientEndpointConfig;
    }

Q_SIGNALS:
    void formClosed();
    void clientEndpointConfigReady(const ClientEndpointConfig &);

protected:
    void closeEvent(QCloseEvent *) override;
    bool eventFilter(QObject *, QEvent *) override;

private slots:
    void onConnectButtonClicked();

private:
    Ui_StartupForm *m_ui;
    ClientEndpointConfig m_clientEndpointConfig;
};

#endif // STARTUP_FORM_H
