@startuml design

' Executables
class client_main as "client_main.cpp"
class server_main as "server_main.cpp"

' Chat
class client_endpoint as "client_endpoint.cpp"
class server_endpoint as "server_endpoint.cpp"

' GUI
class main_window as "main_window.cpp"
class startup_form as "startup_form.cpp"

''' Client GUI
client_main --> main_window
client_main --> startup_form
startup_form --|> main_window : invokes
main_window --> client_endpoint

''' Server
server_main --> server_endpoint

@enduml
